Update requirements.txt with comprehensive dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,37 @@
-# Core Framework
+# Core Dependencies
+smolagents>=0.0.1
+google-generativeai>=0.3.0
 langgraph>=0.0.55
 langchain>=0.1.0
 langchain-community>=0.0.29
 huggingface-hub>=0.19.0
 
-# Essential Tools
-duckduckgo-search>=3.9.0
+# API and HTTP
 requests>=2.31.0
+aiohttp>=3.9.0
+httpx>=0.24.0
+
+# Data Processing
+pandas>=2.0.0
+numpy>=1.24.0
+python-dotenv>=1.0.0
+
+# Web Tools
+duckduckgo-search>=3.9.0
 beautifulsoup4>=4.12.0
 
-# UI (existing)
-gradio
+# UI Framework
+gradio>=5.25.2
+gradio-client>=0.6.0
 
-# Optional
+# Authentication & Security
+itsdangerous>=2.1.2
+python-multipart>=0.0.6
+
+# Image Processing
 pillow>=10.0.0
+
+# Utilities
+tqdm>=4.65.0
+colorama>=0.4.6
+pyyaml>=6.0.1
